@@ -1,3 +1,14 @@
+2008-11-18 Og Maciel <ogmaciel@gnome.org>
+
+	* src/gui/categoriesdialog.py: Only select an item if we have data.
+	* src/gui/adddialog.py: toggle widgets sensibility based on presence
+	 of passed record or not; Added DatePicker widgets for Due Date
+	 and End Date; Set the date for DatePicker using the set_date method;
+	 Select date from DatePicker widget using get_date method; Handle 
+	 endDateLabel sensitivity based on selection of frequency.
+	* gui/widgets/datepicker.py: Added get/set_date methods; Check day_selected
+	 event and update currentDate/label;
+
 2008-11-17 Og Maciel <ogmaciel@gnome.org>
 
 	* src/gui/adddialog.py: Fixed optional fields section for better alignment.
